--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-plugin-vercel": "^3.0.1"
   }
 }
